# codex-oi-bridge

./: .env.example  .flake8  .gitignore  README.md  bridge  pyproject.toml
docs/: CODEX_HANDOFF.md
project_profiles/audio3/: PROFILE.md  VERSION.txt
src/: pkg_resources.py
src/bridge/: __init__.py  cli.py  constants.py  guardrails.py  live.py  models.py  parser.py  runner.py  storage.py  watch.py  web_backend.py  web_bulk_scan.py  web_common.py  web_control_agent.py  web_executor_steps.py  web_frame_guard.py  web_handoff.py  web_handoff_actions.py  web_interaction_executor.py  web_interaction_helpers.py  web_interactive_capture.py  web_interactive_retries.py  web_learning_store.py  web_mouse.py  web_overlay.py  web_preflight.py  web_run_bootstrap.py  web_run_finalize.py  web_run_handoff.py  web_run_loop.py  web_run_postloop.py  web_run_reporting.py  web_run_state.py  web_runtime_safety.py  web_session.py  web_session_overlay_ops.py  web_step_applicability.py  web_step_runner.py  web_steps.py  web_target_preflight.py  (+5 more)
tests/: test_cli.py  test_doctor.py  test_guardrails.py  test_gui_mode.py  test_live.py  test_parser.py  test_runner.py  test_watch.py  test_web_backend.py  test_web_common.py  test_web_control_agent.py  test_web_mode.py  test_web_session.py  test_window_mode.py
